updated for easier control over case

--- a/extra/Dockerfile
+++ b/extra/Dockerfile
@@ -2,8 +2,8 @@ FROM alpine:3.20
 
 ARG REQUIRED_ARG
 
-RUN if [ -z "$REQUIRED_ARG" ]; then \
-    echo "ERROR: REQUIRED_ARG build arg is required" >&2; \
+RUN if [ -z "$REQUIRED_ARG" ] || [ "$REQUIRED_ARG" = "break" ]; then \
+    echo "ERROR: REQUIRED_ARG must be set and must not be 'break'" >&2; \
     exit 1; \
     fi
 
